Fix overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 	align-content: center;
 	flex-direction: column;
 	height: 100vh;
+        overflow: hidden;
 }
 
 #containerClock {
